[gd_scene load_steps=19 format=3 uid="uid://dhobm16afu2ww"]

[ext_resource type="Script" uid="uid://ccm7ad134yjgt" path="res://Scenes/tutorial.gd" id="1_1xys8"]
[ext_resource type="Texture2D" uid="uid://6g4dlnu6ms8c" path="res://assets/ui_assets/keyboard_assets/w_key.png" id="2_gwhjj"]
[ext_resource type="Texture2D" uid="uid://ca45ch752ju6q" path="res://assets/ui_assets/keyboard_assets/a_key.png" id="3_o7nwn"]
[ext_resource type="Texture2D" uid="uid://3p4dy0kv2hua" path="res://assets/ui_assets/keyboard_assets/s_key.png" id="4_07kf4"]
[ext_resource type="Texture2D" uid="uid://bswxdbggojjuu" path="res://assets/ui_assets/keyboard_assets/d_key.png" id="5_41fth"]
[ext_resource type="Texture2D" uid="uid://dfrkw2osmpogd" path="res://assets/ui_assets/keyboard_assets/m1_key.png" id="6_03fyw"]
[ext_resource type="Texture2D" uid="uid://21pas8ooroio" path="res://assets/ui_assets/keyboard_assets/m2_key.png" id="7_6nt65"]
[ext_resource type="Texture2D" uid="uid://hiwtf5t6pqa5" path="res://assets/ui_assets/keyboard_assets/space_key.png" id="8_45jqp"]
[ext_resource type="Texture2D" uid="uid://cl357njep6ryf" path="res://assets/ui_assets/keyboard_assets/1_key.png" id="9_0an7n"]
[ext_resource type="Texture2D" uid="uid://c8sfip3cmf4c" path="res://assets/ui_assets/keyboard_assets/2_key.png" id="10_x3dgi"]
[ext_resource type="Texture2D" uid="uid://jyqqtxyuv6ol" path="res://assets/ui_assets/keyboard_assets/3_key.png" id="11_3dtp4"]
[ext_resource type="Texture2D" uid="uid://bn8kru6ib2txy" path="res://assets/ui_assets/keyboard_assets/4_key.png" id="12_6rpju"]
[ext_resource type="Texture2D" uid="uid://c4x42advi7pwu" path="res://assets/ui_assets/keyboard_assets/5_key.png" id="13_w5yda"]
[ext_resource type="Texture2D" uid="uid://badkj8lbdkasw" path="res://assets/ui_assets/keyboard_assets/t_key.png" id="14_w2v0f"]
[ext_resource type="Texture2D" uid="uid://bmp8cqx2pyct2" path="res://assets/ui_assets/keyboard_assets/esc_key.png" id="15_wwoou"]
[ext_resource type="Texture2D" uid="uid://xsifaeg1llcg" path="res://assets/ui_assets/keyboard_assets/bottomlefthighlight.png" id="16_d1fbx"]
[ext_resource type="Texture2D" uid="uid://dt0ft145be3x8" path="res://assets/ui_assets/keyboard_assets/toplefthighlight.png" id="17_5dwsg"]
[ext_resource type="Texture2D" uid="uid://1uks2odu0qyi" path="res://assets/ui_assets/petergotohell.png" id="18_cvk4f"]

[node name="Tutorial" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -309.0
offset_bottom = -309.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1xys8")
modulate_color = Color(0.032, 100, 0.026, 1)

[node name="movetutorial" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="background2" type="ColorRect" parent="movetutorial"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -241.0
offset_top = -59.0
offset_right = 241.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.188235, 0.188235, 0.188235, 0.815686)

[node name="Label" type="Label" parent="movetutorial/background2"]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 84.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 20
text = "Press"

[node name="Label2" type="Label" parent="movetutorial/background2"]
layout_mode = 0
offset_left = 225.0
offset_top = 34.0
offset_right = 455.0
offset_bottom = 62.0
theme_override_font_sizes/font_size = 20
text = "to move your character
"

[node name="keys" type="Control" parent="movetutorial/background2"]
anchors_preset = 0
offset_left = 92.0
offset_right = 132.0
offset_bottom = 40.0
scale = Vector2(3, 3)

[node name="WKey" type="Sprite2D" parent="movetutorial/background2/keys"]
position = Vector2(22.8333, 11.5)
texture = ExtResource("2_gwhjj")

[node name="AKey" type="Sprite2D" parent="movetutorial/background2/keys"]
position = Vector2(8.83333, 26.5)
texture = ExtResource("3_o7nwn")

[node name="SKey" type="Sprite2D" parent="movetutorial/background2/keys"]
position = Vector2(22.8333, 26.5)
texture = ExtResource("4_07kf4")

[node name="DKey" type="Sprite2D" parent="movetutorial/background2/keys"]
position = Vector2(36.8333, 26.5)
texture = ExtResource("5_41fth")

[node name="tutorialhider" type="Timer" parent="movetutorial/background2"]
wait_time = 2.0
one_shot = true

[node name="combattutorial" type="Control" parent="."]
anchors_preset = 0

[node name="background" type="ColorRect" parent="combattutorial"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.5
offset_top = -79.5
offset_right = 262.5
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.188235, 0.188235, 0.188235, 0.815686)

[node name="Label" type="Label" parent="combattutorial/background"]
layout_mode = 0
offset_left = 19.0
offset_top = 32.0
offset_right = 71.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 20
text = "Press"

[node name="Label3" type="Label" parent="combattutorial/background"]
layout_mode = 0
offset_left = 19.0
offset_top = 108.0
offset_right = 61.0
offset_bottom = 136.0
theme_override_font_sizes/font_size = 20
text = "and"

[node name="Label2" type="Label" parent="combattutorial/background"]
layout_mode = 0
offset_left = 228.0
offset_top = 32.0
offset_right = 519.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 20
text = "to use light and heavy attacks"

[node name="Label4" type="Label" parent="combattutorial/background"]
layout_mode = 0
offset_left = 228.0
offset_top = 108.0
offset_right = 519.0
offset_bottom = 136.0
theme_override_font_sizes/font_size = 20
text = "to dash"

[node name="keys" type="Control" parent="combattutorial/background"]
anchors_preset = 0
offset_left = 108.0
offset_right = 148.0
offset_bottom = 40.0
scale = Vector2(3, 3)

[node name="M1Key" type="Sprite2D" parent="combattutorial/background/keys"]
position = Vector2(3.00001, 18)
texture = ExtResource("6_03fyw")

[node name="M2Key" type="Sprite2D" parent="combattutorial/background/keys"]
position = Vector2(16, 18)
texture = ExtResource("7_6nt65")

[node name="SpaceKey" type="Sprite2D" parent="combattutorial/background/keys"]
position = Vector2(11, 41.6667)
texture = ExtResource("8_45jqp")

[node name="combattutorialhider" type="Timer" parent="combattutorial/background"]
wait_time = 2.0
one_shot = true

[node name="skilltutorial" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -269.0
offset_top = -60.5
offset_right = 269.0
offset_bottom = 60.5
grow_horizontal = 2
grow_vertical = 2

[node name="background4" type="ColorRect" parent="skilltutorial"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -268.5
offset_top = -60.0
offset_right = 268.5
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.188235, 0.188235, 0.188235, 0.815686)

[node name="Label3" type="Label" parent="skilltutorial/background4"]
layout_mode = 0
offset_left = 15.0
offset_top = 18.5
offset_right = 67.0
offset_bottom = 46.5
theme_override_font_sizes/font_size = 20
text = "Press"

[node name="Label4" type="Label" parent="skilltutorial/background4"]
layout_mode = 0
offset_left = 314.0
offset_top = 18.5
offset_right = 528.0
offset_bottom = 77.5
theme_override_font_sizes/font_size = 20
text = "to use your abilities"

[node name="Label5" type="Label" parent="skilltutorial/background4"]
layout_mode = 0
offset_left = 15.0
offset_top = 59.5
offset_right = 229.0
offset_bottom = 118.5
theme_override_font_sizes/font_size = 20
text = "after you unlock them"

[node name="keys" type="Control" parent="skilltutorial/background4"]
anchors_preset = 0
offset_left = 63.0
offset_top = -66.5
offset_right = 103.0
offset_bottom = -26.5
scale = Vector2(3, 3)

[node name="1Key" type="Sprite2D" parent="skilltutorial/background4/keys"]
position = Vector2(9.83333, 33.1667)
texture = ExtResource("9_0an7n")

[node name="2Key" type="Sprite2D" parent="skilltutorial/background4/keys"]
position = Vector2(25.8333, 33.1667)
texture = ExtResource("10_x3dgi")

[node name="3Key" type="Sprite2D" parent="skilltutorial/background4/keys"]
position = Vector2(41.8333, 33.1667)
texture = ExtResource("11_3dtp4")

[node name="4Key" type="Sprite2D" parent="skilltutorial/background4/keys"]
position = Vector2(57.8333, 33.1667)
texture = ExtResource("12_6rpju")

[node name="5Key" type="Sprite2D" parent="skilltutorial/background4/keys"]
position = Vector2(73.8333, 33.1667)
texture = ExtResource("13_w5yda")

[node name="skilltutorialhider" type="Timer" parent="skilltutorial/background4"]
wait_time = 2.0
one_shot = true

[node name="restofthecontrols" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="background3" type="ColorRect" parent="restofthecontrols"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -62.0
offset_right = 254.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.188, 0.188, 0.188, 0.816)

[node name="Label3" type="Label" parent="restofthecontrols/background3"]
layout_mode = 0
offset_left = 114.0
offset_top = 22.0
offset_right = 166.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 20
text = "Press"

[node name="Label5" type="Label" parent="restofthecontrols/background3"]
layout_mode = 0
offset_left = 114.0
offset_top = 68.0
offset_right = 156.0
offset_bottom = 96.0
theme_override_font_sizes/font_size = 20
text = "and"

[node name="Label4" type="Label" parent="restofthecontrols/background3"]
layout_mode = 0
offset_left = 230.0
offset_top = 22.0
offset_right = 426.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 20
text = "to open your talents"

[node name="Label6" type="Label" parent="restofthecontrols/background3"]
layout_mode = 0
offset_left = 230.0
offset_top = 68.0
offset_right = 426.0
offset_bottom = 96.0
theme_override_font_sizes/font_size = 20
text = "to pause the game"

[node name="Control" type="Control" parent="restofthecontrols/background3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -47.0
offset_right = -62.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.1, 3.1)

[node name="TKey" type="Sprite2D" parent="restofthecontrols/background3/Control"]
position = Vector2(5.80644, 5.80645)
texture = ExtResource("14_w2v0f")
flip_h = true

[node name="EscKey" type="Sprite2D" parent="restofthecontrols/background3/Control"]
position = Vector2(5.80645, 20.9677)
texture = ExtResource("15_wwoou")

[node name="controlshider" type="Timer" parent="restofthecontrols/background3"]
wait_time = 2.0
one_shot = true

[node name="bottomlefttutorial" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Bottomlefthighlight" type="Sprite2D" parent="bottomlefttutorial"]
visible = false
self_modulate = Color(0.188, 0.188, 0.188, 0.595)
position = Vector2(1.5, 309)
scale = Vector2(1.00469, 1)
texture = ExtResource("16_d1fbx")

[node name="Label" type="Label" parent="bottomlefttutorial/Bottomlefthighlight"]
offset_left = -643.0
offset_top = 195.0
offset_right = -284.0
offset_bottom = 237.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Here you can see your"

[node name="hpbar" type="Label" parent="bottomlefttutorial/Bottomlefthighlight"]
offset_left = -513.0
offset_top = 449.0
offset_right = 47.0
offset_bottom = 491.0
theme_override_colors/font_color = Color(0.92549, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "HP Bar"

[node name="hpbar2" type="Label" parent="bottomlefttutorial/Bottomlefthighlight"]
offset_left = -599.0
offset_top = 393.0
offset_right = -487.0
offset_bottom = 531.0
theme_override_colors/font_color = Color(0.92549, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "← "

[node name="hpbar3" type="Label" parent="bottomlefttutorial/Bottomlefthighlight"]
offset_left = -632.0
offset_top = 263.0
offset_right = -520.0
offset_bottom = 401.0
theme_override_colors/font_color = Color(0.435294, 0.0588235, 0.462745, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "← "

[node name="xpbar" type="Label" parent="bottomlefttutorial/Bottomlefthighlight"]
offset_left = -550.0
offset_top = 320.0
offset_right = 10.0
offset_bottom = 362.0
theme_override_colors/font_color = Color(0.45098, 0.0627451, 0.478431, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "XP Bar"

[node name="TextureRect" type="TextureRect" parent="bottomlefttutorial/Bottomlefthighlight"]
offset_right = 40.0
offset_bottom = 40.0

[node name="bottomlefthider" type="Timer" parent="bottomlefttutorial"]
wait_time = 5.0
one_shot = true

[node name="minimaptutorial" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Toplefthighlight" type="Sprite2D" parent="minimaptutorial"]
self_modulate = Color(0.188235, 0.188235, 0.188235, 0.596078)
position = Vector2(2.75, 313)
scale = Vector2(1.00703, 1)
texture = ExtResource("17_5dwsg")

[node name="Label" type="Label" parent="minimaptutorial/Toplefthighlight"]
offset_left = -361.0
offset_top = -410.0
offset_right = 199.0
offset_bottom = -278.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Here you can see your minimap
where you can see your enemies
and surroudings"

[node name="hpbar2" type="Label" parent="minimaptutorial/Toplefthighlight"]
offset_left = -611.0
offset_top = -422.0
offset_right = -340.0
offset_bottom = -284.0
scale = Vector2(3, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "← "

[node name="toplefthider" type="Timer" parent="minimaptutorial/Toplefthighlight"]
wait_time = 5.0
one_shot = true

[node name="petergotohell" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="petergotohell"]
visible = false
layout_mode = 0
offset_left = -970.0
offset_top = -235.0
offset_right = 969.0
offset_bottom = 995.0
color = Color(0.917647, 0.0862745, 0.0862745, 1)

[node name="petergotohellhider" type="Timer" parent="petergotohell"]
wait_time = 5.0
one_shot = true

[node name="Petergotohell" type="Sprite2D" parent="petergotohell"]
visible = false
position = Vector2(-11, 215)
scale = Vector2(3, 3)
texture = ExtResource("18_cvk4f")

[connection signal="timeout" from="movetutorial/background2/tutorialhider" to="." method="_on_tutorialhider_timeout"]
[connection signal="timeout" from="combattutorial/background/combattutorialhider" to="." method="_on_combattutorialhider_timeout"]
[connection signal="timeout" from="skilltutorial/background4/skilltutorialhider" to="." method="_on_skilltutorialhider_timeout"]
[connection signal="timeout" from="restofthecontrols/background3/controlshider" to="." method="_on_controlshider_timeout"]
[connection signal="timeout" from="bottomlefttutorial/bottomlefthider" to="." method="_on_bottomlefthider_timeout"]
[connection signal="timeout" from="minimaptutorial/Toplefthighlight/toplefthider" to="." method="_on_toplefthider_timeout"]
[connection signal="timeout" from="petergotohell/petergotohellhider" to="." method="_on_petergotohellhider_timeout"]
[connection signal="timeout" from="petergotohell/petergotohellhider" to="." method="_on_timer_timeout"]
